fix : add z-index to fixed-header and footer

--- a/app/[locale]/styles/partials/_footer.scss
+++ b/app/[locale]/styles/partials/_footer.scss
@@ -4,6 +4,7 @@
 
 .footer {
   @include flex(column, center, center);
+  z-index: 1;
   position: relative;
   min-height: 15rem;
   padding: 2.5rem;
