--- a/app/[locale]/styles/partials/_navigation.scss
+++ b/app/[locale]/styles/partials/_navigation.scss
@@ -30,6 +30,7 @@
 }
 
 .fixed-header {
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
